# i-SAS_Subpackage-template

./: .env.example  README.md  compose.yml  pyproject.toml
demo/: visualization.ipynb
isas_subpackage_template/analysis/: __init__.py  model.py
isas_subpackage_template/measurement/: __init__.py  model.py
isas_subpackage_template/visualization/: __init__.py  dropdowns.py  text_drawer.py
tests/isas_subpackage_template/analysis/: test_model.py
tests/isas_subpackage_template/measurement/: test_model.py
tests/isas_subpackage_template/visualization/: test_dropdowns.py  test_text_drawer.py
