[tool.poetry]
name = "isas_subpackage_template"
version = "1.0.0"
description = "Implementation of {package_type} subpackage {package_name} for i-SAS."
authors = ["Makito Kobayashi"]
repository = "https://github.com/i-SAS/i-SAS_Subpackage-template"
packages = [
    { include = "isas_subpackage_template"},
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
isas_base = { git = "ssh://git@github.com/i-SAS/i-SAS_Base", tag = "v1.0.0" }
numpy = "*"
pandas = "*"
pyyaml = "*"
matplotlib = "*"
pyside6 = "*"

[tool.poetry.dev-dependencies]
flake8 = "6.1.0"
flake8-isort = "*"
flake8-quotes = "*"
ipython = "*"
jupyter = "*"
pep8-naming = "*"
pyproject-flake8 = "*"

[tool.isort]
multi_line_output = 5

[tool.flake8]
max-line-length = 120
exclude = [
    "*/__init__.py",
    ]

[build-system]
requires = ["poetry_core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
